---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var _ : 1 .. 2 := 'c'"
---
"_"@"src/main.t:4..5" [ConstVar(Var, No)]: range of `int` (Unevaluated(PackageId(3072), BodyId(0)) .. Expr(Unevaluated(PackageId(3072), BodyId(1)), No))
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:18..21: mismatched types
| note for src/main.t:18..21: this is of type `char`
| note for src/main.t:8..14: this is of type `1 .. 2`
| info: `char` is not assignable into `1 .. 2`
